--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.15",
-    "vue-router": "^4.2.5",
+    "axios": "^1.6.5",
     "pinia": "^2.1.7",
-    "axios": "^1.6.5"
+    "socket.io-client": "^4.8.1",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
-    "typescript": "^5.3.3",
-    "vue-tsc": "^1.8.27",
-    "vite": "^5.0.11",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vue-tsc": "^1.8.27"
   }
 }
