--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ python-socketio==5.11.1
 python-multipart==0.0.6
 pydantic==2.5.3
 pydantic-settings==2.1.0
+pydantic[email]==2.5.3
 sqlalchemy==2.0.25
 aiosqlite==0.19.0
 gradio-client==0.9.0
@@ -12,3 +13,6 @@ google-generativeai==0.8.3
 requests==2.32.5
 tencentcloud-sdk-python==3.0.1470
 redis==5.0.1
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
