--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
     environment:
       - DATABASE_URL=sqlite+aiosqlite:///./data/ai_companion.db
       - REDIS_URL=redis://redis:6379/0
+      # Docker 环境允许所有 origins（前端通过 Nginx 代理）
+      - ALLOWED_ORIGINS=*
     volumes:
       - ./backend/data:/app/data
       - ./backend/chroma_db:/app/chroma_db
