--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR /app
 # 复制 package.json 和 package-lock.json
 COPY package*.json ./
 
-# 安装依赖
-RUN npm ci --only=production
+# 安装所有依赖（包括 devDependencies，构建时需要）
+RUN npm ci
 
 # 复制源代码
 COPY . .
