--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,6 +22,9 @@ DATABASE_URL=sqlite+aiosqlite:///./ai_companion.db
 APP_NAME=AI灵魂伙伴
 APP_VERSION=1.0.0
 DEBUG=True
+# 禁用 gRPC ALTS 警告
+GRPC_VERBOSITY=ERROR
+GRPC_TRACE=""
 
 # CORS配置 (逗号分隔)
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:8080
